* BUG: Correctly parse table cells that contain links of the form
  [[Topic|Text]].
* BUG: Fix issue with shared library files not being loaded.
* BUG: Modify search engine initialization to avoid setup errors.
* BUG: Correctly maintain file history when redirecting using file
  persistency.
* BUG: Topic names containing percent signs ("%") caused errors.  Fixed.
* FEATURE: Validate system settings during upgrades.
* FEATURE: Add instructions for performing a manual upgrade.
* FEATURE: Clean up the layout of the Special:Admin page.
* FEATURE: Sort property values alphabetically.
* FEATURE: Add validation checks to Special:Admin.
* FEATURE: Add additional validation checks to Special:Setup.
* FEATURE: Remove beta warning from the Special:Translation tool.
* FEATURE: Updated Hungarian translations from bDaneE.
* FEATURE: Updated Chinese translations from ewen0930.
* FEATURE: Updated German translations from Axel Kramer (axelclk).

0.3.3
=====

* BUG: Internet Explorer displays &apos; instead of apostrophe (').
* BUG: Resin taglib handling throws an error on wiki.jsp.
* BUG: Second attempted fix for reported URL decoding issue.
* FEATURE: Updated Hungarian translations from bDaneE.

0.3.2
=====

* BUG: Upgrades in file persistency mode fail due to delete date change.
* BUG: Do not include parentheses in raw links when parsing.

0.3.1
=====

* FEATURE: Add support for Mediawiki redirects (#REDIRECT [[Topic]]).
* FEATURE: Add Special:Move.
* FEATURE: Add jamwiki:linkParam tag, remove jamwiki:encode and
  jamwiki:decode tags.
* FEATURE: For non-image files, [[Image:File]] should display as a download
  link.
* BUG: Apostrophes were not being escaped by the parser.
* BUG: <pre> tags might not be closed by the parser.
* BUG: Use of the edit resolve functionality with a section edit could cause
  the resulting edit to splice together too much text.
* BUG: Upgrade could fail if no user logged in.  Reported by colinbes.
* BUG: Login page displayed the wrong login message.